<resources>
    <string name="app_name">Красное радио</string>
    <string name="nav_header_title">Красное радио \nФонда Рабочей Академии</string>
    <string name="nav_header_subtitle">https://www.krasnoe-radio.ru</string>
    <string name="error_retrofit">Не удалось подключиться к серверу. Проверьте интернет подключение.</string>
    <string name="menu_nav_radio">Красное радио ФРА</string>
    <string name="menu_nav_red_radio">Красное радио</string>
    <string name="share_text">Расскажи товарищам!</string>
    <string name="menu_nav_articlesRPR">Устав Рабочей партии России</string>
    <string name="menu_url_articlesRPR">https://www.r-p-w.ru/ustav.html</string>
    <string name="menu_nav_program_rpr">Программа Рабочей партии России</string>
    <string name="menu_url_program_rpr">https://www.r-p-w.ru/programma.html</string>
    <string name="menu_nav_library_fra">Библиотека ФРА</string>
    <string name="menu_url_library_fra">http://bibl.rpw-mos.ru/</string>
    <string name="menu_nav_rkr">Российский комитет рабочих</string>
    <string name="menu_url_rkr">http://rpw-mos.ru/rossijskij-komitet-rabochix/</string>
    <string name="menu_nav_prof_doc">Документы по профсоюзу</string>
    <string name="menu_url_prof_doc">http://bibl.rpw-mos.ru/dokumenty-pervichnoj-profsoyuznoj-organizacii/</string>
    <string name="menu_nav_ku">Красный университет</string>
    <string name="menu_url_ku">http://rpw-mos.ru/krasnyj-universitet/</string>
    <string name="menu_nav_fra">Фонд рабочей академии</string>
    <string name="menu_url_fra">http://rpw.ru/fra/fra.html</string>
    <string name="menu_share">Поделиться</string>
    <string name="header_for_about">Красное Радио Фонда Рабочей Академии (Фонда содействия обучению рабочих) - это интернет радио. Красное Радио создано и действует при поддержке Фонда Рабочей Академии и Рабочей партии России. Целью радио является просвещение трудящихся, помощь в изучении общественных наук, в частности, марксизма-ленинизма в единстве его трех источников и составных частей:диалектического материализма, политической экономии и научного социализма. В самом широком смысле суть наших усилий - в формировании материалистического взгляда на действительность и научной картины мира с целью его преобразования в интересах рабочего класса, трудящихся
 </string>
    <string name="header_for_about_link1">https://vk.com/krasnoe_radio</string>
    <string name="header_for_about_link2">https://www.krasnoe-radio.ru</string>
    <string name="menu_about">О приложении</string>
    <string name="rpr_logo">Логотип Рабочей партии России</string>
    <string name="play_button">PLAY</string>
    <string name="pause_button">PAUSE</string>
    <string name="stop_button">STOP</string>
    <string name="about_contact">Информационные ресурсы:</string>
    <string name="about_responsible">Ответственные:</string>
    <string name="about_programmer_title">Разработка:</string>
    <string name="about_programmer_name">Синичкин Тимофей\n timofeysin@gmail.com</string>
    <string name="about_designer_title">Дизайн:</string>
    <string name="about_designer_name">Кошкина Полина\n https://vk.com/ozzenka</string>
    <string name="about_idea_title">Главный редактор:</string>
    <string name="about_idea_name">Гомелаури Пётр\n gomelauri-pv@rpw-mos.ru\n https://vk.com/dedshykar</string>
    <string name="about_art_title">Арт:</string>
    <string name="about_art_name">Мигранов Марат\n https://vk.com/id19118067</string>
    <string name="stream_url">https://myradio24.com/</string>
    <string name="technical_work">Технические работы</string>
    <string name="air_rec">Запись эфира радио…</string>
    <string name="setting">Настройки</string>
    <string name="surfing_in_app">Использовать браузер приложения</string>
    <string name="surfing_in_chrome">Использовать браузер по умолчанию</string>
    <string name="shortcut_last_station_short_label">Последняя станция</string>
    <string name="shortcut_last_station_long_label">Воспроизвести последнюю станцию</string>
    <string name="shortcut_last_station_disabled_message">Ярлык для воспроизведения последней станции отключен.</string>
    <string name="menu_icon">Изменить иконку</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_rename">Переименовать</string>
    <string name="menu_shortcut">Поместить на домашний экран</string>
    <string name="descr_app_icon">Значок приложения с изображением старого радио</string>
    <string name="descr_station_options_button">Опции</string>
    <string name="descr_station_name_example">Например FM</string>
    <string name="descr_station_metadata_example">Исполнитель - Название</string>
    <string name="descr_station_stream_loading">Загрузка потока …</string>
    <string name="descr_playback_indicator">Воспроизводимая станция</string>
    <string name="descr_timer_icon">Таймер сна</string>
    <string name="descr_player_sheet_content_copy_icon">Копировать</string>
    <string name="descr_player_sheet_p_stream_url">Адрес потока выбранной радиостанции</string>
    <string name="descr_list_add_new">Добавить новую станцию</string>
    <string name="descr_list_add_select_stream_dropdown">Выбор потока</string>
    <string name="player_sheet_h1_details">Информация</string>
    <string name="player_sheet_h2_current_session">Текущая сессия</string>
    <string name="player_sheet_h2_station_metadata">Сейчас играет</string>
    <string name="player_sheet_h2_stream_url">Адрес потока</string>
    <string name="player_sheet_h2_station_mime_type">MIME-тип</string>
    <string name="player_sheet_h2_station_channel_count">Число каналов</string>
    <string name="player_sheet_h2_station_sample_rate">Частота дискретизации</string>
    <string name="player_sheet_h2_station_bitrate">Битрейт</string>
    <string name="dialog_generic_button_okay">Хорошо</string>
    <string name="dialog_generic_button_cancel">Отмена</string>
    <string name="dialog_add_station_button">Добавить</string>
    <string name="dialog_add_station_input_hint">Вставьте адрес потока</string>
    <string name="dialog_add_station_message">Добавить новую станцию</string>
    <string name="dialog_add_station_howto">Вы можете добавлять аудио потоки, закодированные в MP3, AAC или Ogg/Opus, а также потоки в файлах PLS или M3U. Также можно добавить новую станцию, нажав на ссылку на поток (.pls или .m3u) в вашем веб-браузере.</string>
    <string name="dialog_delete_station_message">Удалить станцию</string>
    <string name="dialog_button_delete">Удалить</string>
    <string name="dialog_rename_station_input_hint">Введите новое имя</string>
    <string name="dialog_rename_station_message">Переименовать станцию</string>
    <string name="dialog_button_rename">Переименовать</string>
    <string name="dialog_add_station_choose_stream_heading">Найдено несколько потоков</string>
    <string name="dialog_add_station_choose_stream_message">Выберите поток</string>
    <string name="dialog_add_station_choose_stream_button">Выбрать</string>
    <string name="dialog_error_title_default">Ошибка</string>
    <string name="dialog_error_message_default">Произошла ошибка</string>
    <string name="dialog_error_details_button_default">Показать подробности</string>
    <string name="dialog_error_details_default">Подробности недоступны</string>
    <string name="dialog_error_details_write">Возможно такая радиостанция уже существует, или у вас проблема с внешним накопителем.</string>
    <string name="dialog_error_title_fetch_download">Проблема скачивания</string>
    <string name="dialog_error_title_fetch_read">Проблема чтения</string>
    <string name="dialog_error_title_fetch_write">Проблема записи</string>
    <string name="dialog_error_message_fetch_general_external_storage">Внешнее хранилище:</string>
    <string name="dialog_error_message_fetch_general_hint_m3u">Подсказка: Transistor может работать только с потоками, закодированными в MP3, AAC и Ogg/Opus, или с ссылками, заканчивающимися на .m3u или .pls.</string>
    <string name="dialog_error_message_fetch_general_playlist_type">MIME-тип файла:</string>
    <string name="dialog_error_message_fetch_general_stream_type">MIME-тип потока:</string>
    <string name="dialog_error_message_fetch_general_file_content">Содержание файла:</string>
    <string name="dialog_error_message_fetch_download">Transistor не может обработать эту ссылку.</string>
    <string name="dialog_error_message_fetch_download_station_url">Адрес станции:</string>
    <string name="dialog_error_message_fetch_read">Transistor не может обработать этот файл.</string>
    <string name="dialog_error_message_fetch_read_file_location">Расположение файла:</string>
    <string name="dialog_error_message_fetch_write">Transistor не смог сохранить эту станцию.</string>
    <string name="toastmessage_add_download_started">Скачивается.</string>
    <string name="toastmessage_add_open_file_started">Открытие файла.</string>
    <string name="toastmessage_long_press_playback_stopped">Воспроизведение остановлено</string>
    <string name="toastmessage_long_press_playback_started">Начинаю воспроизведение радиостанции</string>
    <string name="toastmessage_long_press_change_icon">Изменение иконки станции (обнаружено долгое нажатие)</string>
    <string name="toastmessage_long_press_change_name">Переименование станции (обнаружено долгое нажатие)</string>
    <string name="toastmessage_theme_night">Переключение в ночной режим (обнаружено долгое нажатие)</string>
    <string name="toastmessage_theme_day">Переключение в дневной режим (обнаружено долгое нажатие)</string>
    <string name="toastmessage_theme_follow_system">Тема зависит от системных настроек (обнаружено долгое нажатие)</string>
    <string name="toastmessage_shortcut_created">Ярлык создан.</string>
    <string name="toastmessage_shortcut_not_created">Ярлык не создан. Устройство не позволяет создавать ярлыки.</string>
    <string name="toastmessage_list_refreshed">Перезагрузка списка станций.</string>
    <string name="toastmessage_copied_to_clipboard_url">Адрес потока скопирован в буфер обмена.</string>
    <string name="toastmessage_copied_to_clipboard_metadata">Метаданные скопированы в буфер обмена.</string>
    <string name="toastmessage_station_copied">Станция скопирована в буфер обмена.</string>
    <string name="toastmessage_stream_may_not_work">Обнаружен неподдерживаемый аудиоформат. Воспроизведение потока может не работать должным образом.</string>
    <string name="toastmessage_timer_activated">Таймер сна активирован.</string>
    <string name="toastmessage_timer_cancelled">Таймер сна отключён.</string>
    <string name="toastmessage_timer_duration_increased">Время увеличено.</string>
    <string name="toastmessage_timer_start_unable">Сперва запустите воспроизведение.</string>
    <string name="toastalert_unable_to_connect">Невозможно подключиться. У устройства отсутствует подключение к интернету или ссылка на поток больше не действительна.</string>
    <string name="toastalert_rename_unsuccessful">Невозможно переименовать станцию. Пожалуйста, выберите другое имя.</string>
    <string name="toastalert_delete_successful">Станция была удалена.</string>
    <string name="toastalert_no_external_storage">Нет доступа к внешнему накопителю.</string>
    <string name="toastalert_no_image_picker">Нет приложения для выбора изображений. Установите приложение Галерея.</string>
    <string name="toastalert_headphones_unplugged">Наушники отключили. Воспроизведение остановлено.</string>
    <string name="toastalert_permission_denied">Доступ запрещён:</string>
    <string name="toastalert_station_not_found">Невозможно найти станцию.</string>
    <string name="snackbar_request_storage_access">Приложению должно быть предоставлено разрешение на чтение данных на внешнем накопителе.</string>
    <string name="snackbar_message_timer_set">Таймер сна установлен на</string>
    <string name="notification_play">Воспроизвести</string>
    <string name="notification_stop">Остановить</string>
</resources>