<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sinichkin.timofey.redradio.ui.HomeFragment"
        android:label="@string/menu_nav_radio" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.sinichkin.timofey.redradio.ui.AboutFragment"
        android:label="@string/menu_about" />
    <fragment
        android:id="@+id/nav_about_fra"
        android:name="com.sinichkin.timofey.redradio.ui.WebViewFragment"
        android:label="@string/menu_nav_fra">
        <argument
            android:name="urlWebView"
            android:defaultValue="@string/menu_url_fra"
            app:argType="reference" />
    </fragment>
    <fragment
        android:id="@+id/nav_articles_rpr"
        android:name="com.sinichkin.timofey.redradio.ui.WebViewFragment"
        android:label="@string/menu_nav_articlesRPR">
        <argument
            android:name="urlWebView"
            android:defaultValue="@string/menu_url_articlesRPR"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/nav_program_rpr"
        android:name="com.sinichkin.timofey.redradio.ui.WebViewFragment"
        android:label="@string/menu_nav_program_rpr">
        <argument
            android:name="urlWebView"
            android:defaultValue="@string/menu_url_program_rpr"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/nav_library_fra"
        android:name="com.sinichkin.timofey.redradio.ui.WebViewFragment"
        android:label="@string/menu_nav_library_fra">
        <argument
            android:name="urlWebView"
            android:defaultValue="@string/menu_url_library_fra"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/nav_rkr"
        android:name="com.sinichkin.timofey.redradio.ui.WebViewFragment"
        android:label="@string/menu_nav_rkr">
        <argument
            android:name="urlWebView"
            android:defaultValue="@string/menu_url_rkr"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/nav_prof_doc"
        android:name="com.sinichkin.timofey.redradio.ui.WebViewFragment"
        android:label="@string/menu_nav_prof_doc">
        <argument
            android:name="urlWebView"
            android:defaultValue="@string/menu_url_prof_doc"
            app:argType="reference" />
        <argument
            android:name="JavaScriptEnable"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_ku"
        android:name="com.sinichkin.timofey.redradio.ui.WebViewFragment"
        android:label="@string/menu_nav_ku">
        <argument
            android:name="urlWebView"
            android:defaultValue="@string/menu_url_ku"
            app:argType="reference" />
    </fragment>
</navigation>