<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_nav_radio" />
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="@string/menu_fra" />-->
    </group>


        <item android:title="@string/menu_nav_fra">
            <menu>
                <item
                    android:id="@+id/nav_about_rkr"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_nav_about_rkr" />
                <item
                    android:id="@+id/nav_articles_rpr"
                    android:icon="@drawable/ic_menu_share"
                    android:title= "@string/menu_nav_articlesRPR"/>
                <item
                    android:id="@+id/nav_program_rpr"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_nav_program_rpr" />
                <item
                    android:id="@+id/nav_library_fra"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_nav_library_fra" />
                <item
                    android:id="@+id/nav_nav_rkr"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_nav_rkr" />
            </menu>
        </item>



<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
